--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only ./src/shared/http/server.ts",
-    "lint": "eslint --ext .ts"
+    "lint": "eslint --ext .ts",
+    "typeorm" : "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
