--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/config": "^3.3.3",
+    "@types/dotenv": "^8.2.0",
+    "config": "^3.3.10",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
